# SyntheGrAnon

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml  requirements.txt  run.py
exps/: compute_utility.py  create_dataset.py  graph_funcs.py  proc_graph_exps.py  run_graph_exps.py  utility.csv
exps/datasets/ego-facebook/: ego-facebook_attr.pickle  ego-facebook_unattr.pickle  spectre_ego-facebook_attr.pickle
exps/datasets/ego-twitter/: ego-twitter.pickle  ego-twitter_attr.pickle
exps/datasets/elliptic/: elliptic_attr.pickle
exps/results/: edge_inference.csv  edge_linkability.csv  edge_singling-out.csv  graph_inference.csv  graph_linkability.csv  graph_singling-out.csv  node_inference.csv  node_linkability.csv  node_singling-out.csv
exps/tables/: edge.txt  graph.txt  node.txt
src/anonymeter/: graph_consts.py
src/anonymeter/evaluators/: __init__.py  edge_evaluators.py  inference_evaluator.py  inference_predictor.py  linkability_evaluator.py  node_evaluators.py  singling_out_evaluator.py  sklearn_inference_predictor.py
src/anonymeter/neighbors/: mixed_types_kneighbors.py
src/anonymeter/preprocessing/: transformations.py  type_detection.py
src/anonymeter/stats/: confidence.py
tests/: fixtures.py  test_inference_evaluator.py  test_linkability_evaluator.py  test_singling_out_evaluator.py  test_sklearn_inference_model.py
