# See LICENSE.md for licensing details.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthegranon"
version = "1.0.1"
authors = [
  { name = "Abele Mălan" },
  { name = "Ahmad Al Kurdi" },
  { name = "Stefanie Roos" },
  { name = "Lydia Chen" },
]
description = "Measure legislature-aligned privacy risks in synthetic graphs."
readme = "README.md"
requires-python = "<3.14, >=3.10"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-learn~=1.6",
    "numpy~=2.2",
    "pandas~=3.0",
    "joblib~=1.4",
    "numba~=0.62",
    "networkx~=3.5",
    "torch~=2.7",
    "torch_geometric~=2.7",
    "polars~=1.37",
    "pyarrow~=23.0"
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab~=3.4",
    "matplotlib~=3.5",
    "seaborn~=0.11",
    "pyemd~=1.1",
    "PyGSP~=0.5.1",
    "pydantic~=2.11"
]

dev = [
    # Linting and formatting
    "ruff~=0.1.14",
    "mypy~=1.8.0",

    # Pre-commit checks
    "pre-commit~=3.5",

    # Testing
    "pytest~=7.4",

    # Building and packaging
    "build~=0.10",
    "twine~=4.0",
]

[project.urls]
"Homepage" = "https://github.com/AbeleMM/SyntheGrAnon"
"Bug Tracker" = "https://github.com/AbeleMM/SyntheGrAnon/issues"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/

line-length = 120

select = [
    "B",    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",   # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E4",   # https://docs.astral.sh/ruff/rules/#error-e
    "E7",
    "E9",
    "NPY",
    "F",    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I001", # isort
    "W",    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "YTT",  # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
    "PGH",  # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE",  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "UP",   # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
known-first-party = ["anonymeter"]
forced-separate = ["tests"]

[tool.ruff.lint]
extend-select = ["NPY201"]
preview = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
check_untyped_defs = true
show_error_context = false
exclude = [
    "docs",
    "build",
    "dist",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning",
]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
xfail_strict=true
